--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,9 @@
 name: CI
 on:
+  pull_request:
+    branches: master
   push:
-    branches:
-      - master
+    branches: master
 jobs:
   build:
     runs-on: ubuntu-latest
